# xuanji

./: .gitignore  CHANGELOG.md  CHANNELS_REPORT.md  CONTRIBUTING.md  QUICKSTART.md  README.md  bridge.py  config.toml  final_test.py  pyproject.toml  start_daemon.py
.github/workflows/: ci.yml
core/: CMakeLists.txt
core/include/: XUANJI.h  oa_pal.h
core/pal/: oa_pal_unix.c  oa_pal_win.c
core/src/: oa_bus.c  oa_fs.c  oa_heart.c  oa_init.c  oa_proc.c  oa_res.c  oa_sched.c
docs/: API_CONFIG.md  ARCHITECTURE.md  EXTENSION.md  ROADMAP.md  SECURITY.md  UAL_DESIGN.md  evolution_system.md  retrospective_20260516.md  review_20260516.md  universal_adapter_layer.md
examples/: ual_migrate_example.py
examples/01-hello/: agent.py  config.toml
examples/02-desktop/: config.toml
examples/03-voice/: config.toml
examples/04-multi-agent/: config.toml
python/xuanji/: __init__.py  _ffi.py  a2a.py  ab_test.py  adaptive_security.py  agent_card.py  agent_runner.py  agent_tools.py  agent_tools_v2.py  antipattern.py  arbiter.py  autodoc.py  benchmark.py  browser.py  bus.py  changelog.py  checkpoint.py  cli.py  cold_start.py  config.py  context.py  contributing.py  cost_tracker.py  cross_task_index.py  daemon.py  dashboard.py  data_pipe.py  debugger.py  embodied.py  error_codes.py  events.py  evolution.py  evolution_hook.py  export_import.py  failure_learning.py  filetools.py  fsm.py  governor.py  governor_advanced.py  governor_budget.py  (+40 more)
python/xuanji/adapters/: __init__.py  autogen_adapter.py  base.py  claude_adapter.py  crewai_adapter.py  langchain_adapter.py  llamaindex_adapter.py  mcp_adapter.py  migrate.py  openai_adapter.py  openclaw_adapter.py  skill_executor.py
python/xuanji/channels/: __init__.py  _base.py  bilibili.py  dingtalk.py  discord.py  douyin.py  email.py  facebook.py  feishu.py  imessage.py  instagram.py  irc.py  line.py  matrix.py  mattermost.py  qq.py  router.py  signal.py  slack.py  sms.py  teams.py  telegram.py  twitter.py  webhook.py  websocket_channel.py  wechat.py  wecom.py  weibo.py  whatsapp.py  xiaohongshu.py  xmpp.py
python/xuanji/evolution/: __init__.py  antipattern.py  engine.py  failure_learning.py  hook.py  hooks.py  learning.py  pattern_reuse.py
python/xuanji/hands/: __init__.py  _base.py  _darwin.py  _linux.py  _win.py  browser.py
python/xuanji/llm/: __init__.py  _base.py  baichuan_adapter.py  dashscope_adapter.py  deepseek_adapter.py  domestic_aggregator.py  domestic_budget.py  domestic_cache.py  domestic_router.py  doubao_adapter.py  groq_adapter.py  hunyuan_adapter.py  llamacpp.py  minimax_adapter.py  moonshot_adapter.py  ollama.py  openai_compat.py  openrouter_adapter.py  qianfan_adapter.py  router.py  sensenova_adapter.py  siliconflow_adapter.py  spark_adapter.py  stepfun_adapter.py  together_adapter.py  yi_adapter.py  zhipu_adapter.py
python/xuanji/memory/: __init__.py  compactor.py  guard.py  manager.py  store.py
python/xuanji/perception/: __init__.py  _base.py  _darwin.py  _linux.py  _win.py  diff.py
python/xuanji/security/: __init__.py  audit.py  audit_standard.py  csp.py  deep_security.py  guard.py  privacy.py  red_team.py  sandbox.py  sanitizer.py  secrets.py  secure_config.py  threat_model.py
python/xuanji/voice/: __init__.py  stt.py  tts.py  wakeword.py
python/xuanji/workflow/: __init__.py  checkpoint.py  engine.py  scheduler.py
tests/: full_audit.py  test_full_chain.py
web/: index.html
